--- a/components/admin/docs.jade
+++ b/components/admin/docs.jade
@@ -37,7 +37,7 @@ template(name='cloud')
             .unselect_tag.ui.active.button
                 strong #{this}
     each all_tags
-        .ui.basic.button.select_tag(class=cloud_tag_class) 
+        .ui.compact.button.select_tag(class=cloud_tag_class) 
             strong #{this.name}
 
 
