--- a/components/tasks.jade
+++ b/components/tasks.jade
@@ -1,36 +1,42 @@
 template(name='tasks')
     .ui.stackable.padded.grid
         .row
-            .four.wide.column
+            .six.wide.column
                 +i name='tasks' classes='ui inline image'
                 .ui.inline.header tasks
                 .ui.icon.big.button.add_task
                     i.plus.green.icon
                 +cloud filter='task'
-                .ui.header work done
-                .ui.header tasks completed
-                .ui.header tasks completed time
-                .ui.header task estimated time
-                .ui.header task monthly completeion rate
-            .twelve.wide.column
+                .ui.large.button.calculate_task_stats
+                    |calculate task stats
+                with task_stats_doc
+                    .ui.header work done
+                    .ui.header total #{total_count}
+                    .ui.header complete tasks #{complete_count}
+                    .ui.header incomplete tasks #{incomplete_count}
+                    .ui.header tasks completed time
+                    .ui.header task estimated time
+                    .ui.header task monthly completion rate
+            .ten.wide.column.scrolling
                 each my_tasks
                     +task_card_template
                     
                     
 template(name='task_card_template')
     .ui.segment                    
-        .ui.inline.header #{description}
+        .ui.inline.header #{title}
             if complete
                 i.large.green.checkmark.icon
         .ui.basic.segment
-            |!{description}
+            +html_view key='description' label='description' direct=true
         each tags
             .ui.basic.large.label #{this}
         if is_admin
             +boolean_edit key='complete' label='complete' direct=true
-        +html_view key='description' label='description' direct=true
         +boolean_view key='complete' label='complete' direct=true
+        div
         +number_view key='estimated_minutes' label='estimated minutes' direct=true
+        div
         +single_user_view key='assigned_to' role_filter='user' label='assigned to' direct=true
         div
         a.ui.button(href="/task/#{_id}/view")
@@ -44,8 +50,8 @@ template(name='task_edit')
             .row
                 .four.wide.column 
                     .ui.header edit task
-                    a.ui.button(href="/task/#{_id}/view")
-                        |view
+                    a.ui.big.icon.fluid.button(href="/task/#{_id}/view" title='save')
+                        i.green.checkmark.icon
                 .twelve.wide.column 
                     +text_edit key='title' label='title' direct=true
                     +array_edit key='tags' label='tags' direct=true
@@ -53,16 +59,20 @@ template(name='task_edit')
                     +boolean_edit key='complete' label='complete' direct=true
                     +number_edit key='estimated_minutes' label='estimated minutes' direct=true
                     +single_user_edit key='assigned_to' role_filter='user' label='assigned to' direct=true
+                    +multi_user_edit key='assigned_to_multiple' role_filter='user' label='assigned to' direct=true
                      
 template(name='task_view')
     with current_doc
         .ui.stackable.padded.grid
             .row
                 .four.wide.column 
-                    a.ui.button(href="/task/#{_id}/edit")
+                    a.ui.fluid.button(href="/tasks")
+                        +i name='tasks' classes='ui inline image'
+                        |tasks
+                    .ui.header view task
+                    a.ui.fluid.button(href="/task/#{_id}/edit")
                         i.pencil.icon
                         |edit
-                    .ui.header view task
                     +voting
                     +viewing
                 .twelve.wide.column 
@@ -73,3 +83,36 @@ template(name='task_view')
                     +number_view key='estimated_minutes' label='estimated minutes' direct=true
                     +single_user_view key='assigned_to' role_filter='user' label='assigned to' direct=true
                     +comments
+
+
+
+
+template(name='user_tasks')
+    .ui.inline.header 
+        +i name='tasks'
+        |tasks
+    +goto_model slug='task'
+    .ui.icon.input
+        i.plus.icon
+        input.assign_task(type='text' placeholder='assign task...')
+    //- .ui.circular.button.view_complete(class=view_complete_class)
+    //-     |view completed
+    //- .ui.circular.button.view_incomplete(class=view_complete_class)
+    //-     |view incomplete
+    
+    each assigned_tasks
+        +user_task_segment
+        
+template(name='user_task_segment')
+    .ui.segment
+        a.ui.header(href="/task/#{_id}/view") #{body}
+        +boolean_edit key='complete' label='complete' direct=true true_icon='checkmark' false_icon='remove'
+        +voting
+        +author_info
+        +creation_info
+        if is_author
+            +remove_button
+    a.ui.icon.button(href="/task/#{_id}/view")
+        i.right.chevron.icon
+    a.ui.icon.button(href="/task/#{_id}/edit")
+        i.pencil.icon
